tests/compilefail42.out
[1mtests/compilefail42.pas:11:13: [0m[1m[91merror:[0m Cannot assign a value to the control variable 'i' of a 'for' statement
    11 | 			i := i + 2;